--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "btoa": "^1.2.1",
     "child_process": "^1.0.2",
+    "lokijs": "^1.5.6",
     "socket.io-client": "^2.2.0"
   }
 }
