--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
   "dependencies": {
     "btoa": "^1.2.1",
     "child_process": "^1.0.2",
+    "global": "^4.4.0",
     "lokijs": "^1.5.6",
-    "socket.io-client": "^2.2.0"
+    "nodemon": "^1.19.1",
+    "socket.io-client": "^2.2.0",
+    "tessel-matrix-keypad": "^0.0.1"
   }
 }
