--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Kory King",
   "license": "MIT",
   "dependencies": {
+    "atob": "^2.1.2",
     "btoa": "^1.2.1",
     "child_process": "^1.0.2",
     "global": "^4.4.0",
