--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   },
   "dependencies": {
     "atob": "^2.1.2",
+    "body-parser": "^1.19.0",
     "btoa": "^1.2.1",
     "child_process": "^1.0.2",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
     "global": "^4.4.0",
     "lokijs": "^1.5.6",
     "nodemon": "^1.19.1",
