--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "btoa": "^1.2.1",
     "child_process": "^1.0.2",
     "cors": "^2.8.5",
+    "edit-json-file": "^1.2.1",
     "events": "^3.0.0",
     "express": "^4.17.1",
     "global": "^4.4.0",
